# git2-process-filter

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: e2e.rs
